--- a/automations/battery_luna_2000_S1_interval_1a_2.yaml
+++ b/automations/battery_luna_2000_S1_interval_1a_2.yaml
@@ -77,3 +77,6 @@ action:
               entity_id: select.batteries_working_mode
             data:
               option: "maximise_self_consumption" 
+          - service: input_boolean.turn_off
+            target: 
+                entity_id: input_boolean.interval_1a 
