--- a/template.yaml
+++ b/template.yaml
@@ -2,12 +2,12 @@
       unique_id: huseffekt_exl_elbil
       unit_of_measurement: "kW"
       state: >
-        {% set net_power = states('sensor.power_meter_active_power') | float(0) %} #YOUR ACTIVE POWER METER EXPORT/IMPORT
+        {% set net_power = states('sensor.power_meter_active_power') | float(0) %} {#YOUR ACTIVE POWER METER EXPORT/IMPORT#}
         {% set import = -net_power if net_power < 0 else 0 %}
         {% set export = net_power if net_power > 0 else 0 %}
-        {% set elbil = states('sensor.ADD_YOUR_WALLBOX') | float(0) %}  #YOUR WALLBOX POWER IN kW
-        {% set batt = states('sensor.batteries_charge_discharge_power') | float(0) %} #YOUR BATTERY DISCHARGE POWER
-        {% set solar = states('sensor.input_power_with_efficiency_loss_kw') | float(0) %} #YOUR SOLAR POWER
+        {% set elbil = states('sensor.ADD_YOUR_WALLBOX') | float(0) %}  {#YOUR WALLBOX POWER IN kW#}
+        {% set batt = states('sensor.batteries_charge_discharge_power') | float(0) %} {#YOUR BATTERY DISCHARGE POWER#}
+        {% set solar = states('sensor.input_power_with_efficiency_loss_kw') | float(0) %} {#YOUR SOLAR POWER#}
 
         {# Batteriurladdning hjälper huset, batteriladdning ska dras bort #}
         {% set batt_out = -batt if batt < 0 else 0 %}
